RESOLVED FIXED113658
[CSSRegions] RenderFlowThread should not be created as a Document renderer
https://bugs.webkit.org/show_bug.cgi?id=113658
Summary [CSSRegions] RenderFlowThread should not be created as a Document renderer
Mihnea Ovidenie
Reported 2013-03-31 03:44:37 PDT
After https://bugs.webkit.org/show_bug.cgi?id=107138, RenderFlowThread should not be constructed as a renderer for Document. Since it does not have an element associated, it will be constructed using the pattern for anonymous blocks.
Attachments
Patch (10.27 KB, patch)
2013-03-31 04:12 PDT, Mihnea Ovidenie
no flags
Patch for landing (10.94 KB, patch)
2013-04-02 00:51 PDT, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2013-03-31 04:12:49 PDT
Mihnea Ovidenie
Comment 2 2013-04-02 00:51:20 PDT
Created attachment 196087 [details] Patch for landing
WebKit Review Bot
Comment 3 2013-04-02 03:36:40 PDT
Comment on attachment 196087 [details] Patch for landing Clearing flags on attachment: 196087 Committed r147414: <http://trac.webkit.org/changeset/147414>
WebKit Review Bot
Comment 4 2013-04-02 03:36:44 PDT
All reviewed patches have been landed. Closing bug.
Dave Hyatt
Comment 5 2013-04-02 11:09:44 PDT
Comment on attachment 196087 [details] Patch for landing View in context: https://bugs.webkit.org/attachment.cgi?id=196087&action=review > Source/WebCore/rendering/RenderMultiColumnFlowThread.cpp:45 > + ASSERT(document->cssRegionsEnabled()); You should remove this line. Ultimately multicolumn layout will be on even if the CSS Regions feature is not.
Note You need to log in before you can comment on or make changes to this bug.